# cpp-otus-kurs_01-build-test-deploy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  run.sh  test_version.cpp
test/: test_version.cpp
